--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "autoprefixer": "10.4.19",
+    "install": "^0.13.0",
     "next": "14.2.4",
+    "npm": "^10.8.1",
     "postcss": "8.4.38",
     "react": "18.3.1",
     "react-dom": "18.3.1",
