--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "autoprefixer": "10.4.19",
+    "axios": "^1.7.2",
     "install": "^0.13.0",
     "next": "14.2.4",
     "npm": "^10.8.1",
