--- a/package.json
+++ b/package.json
@@ -14,17 +14,27 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@reduxjs/toolkit": "^2.2.5",
     "autoprefixer": "10.4.19",
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.0",
+    "mongoose": "^8.4.4",
     "next": "14.2.4",
     "npm": "^10.8.1",
     "postcss": "8.4.38",
     "react": "18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.3.1",
+    "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.11",
     "tailwindcss": "3.4.4"
   }
