--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@reduxjs/toolkit": "^2.2.5",
     "autoprefixer": "10.4.19",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
+    "dotenv": "^16.4.5",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
